# horizon-acc

./: MANIFEST.in  manage.py  openstack-common.conf  requirements.txt  setup.cfg
easystack_dashboard/: context_processors.py  exceptions.py  policy_backend.py  settings.py  static_settings.py  urls.py  views.py
easystack_dashboard/api/: __init__.py  base.py  billing.py  ceilometer.py  chakra.py  cinder.py  fwaas.py  ganglia.py  gbp.py  glance.py  ipmi.py  keystone.py  lbaas.py  lbaasv2.py  mana.py  nagios.py  network.py  neutron.py  nova.py  signup.py  storage.py  ticket.py  vpn.py
easystack_dashboard/common/: json2object.py  models.py
easystack_dashboard/conf/: keystone_policy.json
easystack_dashboard/easystack_tables/: __init__.py  base.py
easystack_dashboard/easystack_workflows/: __init__.py  base.py
easystack_dashboard/enabled/: _10_project.py  _20_admin.py  _25_identity.py  _30_settings.py  _40_thinkcloud.py  _50_lenovo.py
easystack_dashboard/local/: local_settings.py  local_settings.py.example  local_settings_operate.sh
easystack_dashboard/templates/: 403.html  404.html  500.html  _es_stylesheets.html  browers.html  es_base.html  es_header.html  favicon.html
easystack_dashboard/templatetags/: context_selection.py
easystack_dashboard/usage/: __init__.py  base.py  quotas.py  tables.py  views.py
easystack_dashboard/utils/: file_parser.py  json_encoder.py  settings.py  xls_util.py
easystack_dashboard/wsgi/: django.wsgi
horizon/: base.py  site_urls.py
horizon/browsers/: __init__.py  base.py  breadcrumb.py
tools/: update_translate.sh
(+1205 files in other folders)
