[metadata]
name = horizon
version = 2014.11.1
summary = EasyStack Dashboard
description-file =
    README.rst
author = ChenZheng
author-email = chen.zheng@easystack.cn
home-page = http://www.easystack.cn/
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Topic :: Internet :: WWW/HTTP

[global]
setup-hooks =
    easystack_dashboard.hooks.setup_hook

[files]
packages =
    horizon
    easystack_dashboard
    lenovo_dashboard

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[nosetests]
verbosity=2
detailed-errors=1
